--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "node script.js"
   },
   "devDependencies": {
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "jspdf": "^2.5.1"
-  }
+    "dotenv": "^16.4.5",
+    "jspdf": "^2.5.1",
+    "openai": "^4.41.1"
+  },
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
