--- a/package.json
+++ b/package.json
@@ -4,19 +4,15 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "node script.js"
+    "dev": "node script.js",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
     "jspdf": "^2.5.1",
     "openai": "^4.41.1"
-  },
-  "main": "index.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+  }
 }
